--- a/sass/blocks/features.scss
+++ b/sass/blocks/features.scss
@@ -145,6 +145,11 @@
   .features {
     margin-left: 175px;
   }
+
+  .features__wrapper {
+    margin-bottom: 25px;
+  }
+
   .features__item {
     width: 350px;
 
