--- a/sass/blocks/page-main.scss
+++ b/sass/blocks/page-main.scss
@@ -1,13 +1,6 @@
-// .page-main {
-//   background-color: rgb(249, 249, 249);
-//   background-image: url("../img/hero-mobile@1x.jpg");
-//   background-position: 0 0;
-//   background-repeat: no-repeat;
-//   // background-size: 320px auto;
-// }
 .page-main__main-title {
   @include title;
-  // background: transparent;
+
   letter-spacing: 1.2px;
   background-color: rgb(251, 251, 251);
   background-image: url("../img/hero-mobile.jpg");
@@ -21,6 +14,7 @@
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/hero-mobile@2x.jpg");
   }
+
   &--catalog {
     padding-top: 73px;
     padding-bottom: 78px;
@@ -28,6 +22,7 @@
 
     background-color: lighten($dark, 95%);
   }
+
   &--form {
     padding-top: 73px;
     padding-bottom: 75px;
@@ -58,11 +53,11 @@
     line-height: 50px;
 
     background-image: url("../img/hero-desktop.jpg");
-    // background-size: 748px 646px;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url("../img/hero-desktop@2x.jpg");
     }
+
       br:nth-child(1) {
         display: none;
       }
@@ -73,10 +68,18 @@
       line-height: 50px;
     }
 }
-  @media (min-width: $desktop-width) {
-    width: 640px;
-    padding-top: 130px;
+
+@media (min-width: $desktop-width) {
+  .page-main__main-title {
+    width: 1150px;
+    // height: 590px;
+    margin-top: 0px;
+
     font-size: 50px;
     line-height: 57px;
-
   }
+  .page-main__title {
+    font-size: 50px;
+    line-height: 57px;
+  }
+}
