--- a/sass/blocks/page-main.scss
+++ b/sass/blocks/page-main.scss
@@ -15,20 +15,24 @@
     background-image: url("../img/hero-mobile@2x.jpg");
   }
 
-  &--catalog {
-    padding-top: 73px;
-    padding-bottom: 78px;
+  &--catalog,
+  &--form {
+    height: auto;
+    padding-top: 70px;
+    padding-bottom: 80px;
     margin-bottom: 30px;
-
+    font-size: 24px;
+    background-image: none;
     background-color: lighten($dark, 95%);
   }
 
   &--form {
-    padding-top: 73px;
     padding-bottom: 75px;
-    margin-bottom: 25px;
+    margin-bottom: 24px;
 
-    background-color: lighten($dark, 95%);
+    letter-spacing: 1px;
+    font-size: 27px;
+    line-height: 30px;
   }
 }
 
@@ -42,9 +46,9 @@
   color: $dark;
 }
 
-  @media (min-width: $tablet-width) {
+@media (min-width: $tablet-width) {
     .page-main__main-title {
-    width: 768px;
+    width: 100%;
     height: 600px;
     margin-top: -50px;
     padding-top: 153px;
@@ -56,6 +60,22 @@
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url("../img/hero-desktop@2x.jpg");
+    }
+
+    &--catalog,
+    &--form {
+      height: auto;
+      padding-top: 95px;
+      @include zigzag-big;
+      padding-bottom: 93px;
+      margin-bottom: 67px;
+      font-size: 40px;
+    }
+
+    &--form {
+      margin-bottom: 60px;
+
+      font-size: 43px;
     }
 
       br:nth-child(1) {
@@ -72,12 +92,23 @@
 @media (min-width: $desktop-width) {
   .page-main__main-title {
     width: 1150px;
-    // height: 590px;
     margin-top: 0px;
 
     font-size: 50px;
     line-height: 57px;
+
+    &--catalog,
+    &--form {
+      padding-bottom: 115px;
+      background-size: auto 34px;
+      margin-bottom: 115px;
+    }
+
+    &--form {
+      margin-bottom: 108px;
+    }
   }
+
   .page-main__title {
     font-size: 50px;
     line-height: 57px;
