--- a/sass/blocks/video.scss
+++ b/sass/blocks/video.scss
@@ -1,8 +1,8 @@
 .video {
   @include clear;
   position: relative;
-  // margin-left: 30px;
-  // margin-right: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
   margin-bottom: 58px;
 
   color: $dark;
@@ -10,87 +10,147 @@
   border: 1px solid $light-grey;
 }
 
+.video__play--wrapper {
+  @include image-wrapper;
+
+  height: 150px;
+}
+
 .video__title {
+  @include clear;
   position: absolute;
-  top: 0;
+  top: 22px;
   padding-left: 90px;
   margin-bottom: 25px;
 
-  font-size: 17px;
+  font-size: 16px;
   line-height: 24px;
   font-weight: 700;
+  font-family: $font-bold;
+
+  background-image: url("../img/icon-video.svg");
+  background-position: 30px 5px;
+  background-repeat: no-repeat;
 }
 
 .video__play {
+  @include clear;
+  width: 100%;
   height: 150px;
-  margin-top: 50px;
-  margin-bottom: 32px;
+  margin-top: 78px;
+  margin-bottom: 6px;
+
+  background-color: rba(241, 241, 241);
 }
 
 .video__description {
   @include clear;
   padding-left: 34px;
-  margin-bottom: 30px;
+  padding-right: 40px;
+  margin-bottom: 25px;
 
-  font-size: 13px;
+  font-size: 14px;
   line-height: 24px;
 }
 
 .video__order {
   width: 190px;
-  margin-left: 30px;
-  margin-bottom: 33px;
+  margin-left: 33px;
+  margin-bottom: 30px;
 }
+
 @media (min-width: $tablet-width) {
   .video {
+    @include container;
+    margin: 0;
+    margin-bottom: 64px;
     display: flex;
     flex-direction: column;
+    border: 0;
   }
+
+  .video__play--wrapper {
+    position: relative;
+
+    width: 668px;
+    height: auto;
+  }
+
   .video__play {
-    width: 666px;
+    width: 680px;
     height: 455px;
     margin-top: 0;
+    margin-bottom: 0;
   }
+
   .video__wrapper {
+    border: 1px solid $light-grey;
     padding-right: 42px;
     padding-left: 42px;
   }
+
   .video__title {
     position: relative;
+    padding-top: 15px;
+    padding-bottom: 15px;
     padding-left: 63px;
+    font-size: 18px;
+    background-position: 0 10px;
+    margin-bottom: 15px;
   }
 
   .video__order {
     width: 584px;
     margin-left: 0;
+    margin-bottom: 43px;
   }
+
   .video__description {
     padding-left: 0;
+    padding-right: 0;
+    padding-top: 25px;
+    margin-bottom: 35px;
 
-    font-size: 15px;
+    font-size: 16px;
     line-height: 30px;
   }
 }
+
 @media (min-width: $desktop-width) {
   .video {
     flex-direction: row;
+    margin-bottom: 104px;
   }
+
   .video__wrapper {
-    width: 255px;
-    margin-top: 100px;
+    box-sizing: border-box;
+    width: 370px;
+    padding-right: 0;
+    padding-left: 81px;
   }
+
   .video__title {
-    padding: 0;
+    padding-right: 175px;
+    padding-left: 0;
+    padding-top: 73px;
+
+    background-position: 0 17px;
   }
+
+  .video__play--wrapper {
+    width: 680px;
+  }
+
   .video__play {
     width: 682px;
-    margin-right: 78px;
     margin-bottom: 0;
   }
+
   .video__order {
     width: 230px;
   }
+
   .video__description {
-    padding: 0;
+    margin-bottom: 45px;
   }
 }
