--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -33,3 +33,23 @@
   background-position: 0 bottom;
   background-repeat: no-repeat;
 }
+
+@mixin zigzag-big {
+  background-image: url("../img/bg-zigzag-fill.svg");
+  background-position: 0 bottom;
+  background-repeat: no-repeat;
+  background-size: auto 24px;
+}
+
+@mixin image-wrapper {
+  position: relative;
+
+  margin: 0;
+
+  line-height: 0;
+  text-align: center;
+
+  background-color: #e8e9eb;
+
+  overflow: hidden;
+}
