--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,7 @@
 @import "variables.scss";
 @import "global/fonts.scss";
 @import "global/visually-hidden.scss";
-@import "global/global.scss";
+@import "global/scaffolding.scss";
 @import "global/button.scss";
 @import "global/container.scss";
 @import "blocks/page-header.scss";
@@ -17,5 +17,5 @@
 @import "blocks/page-footer.scss";
 @import "blocks/catalog.scss";
 @import "blocks/video.scss";
-@import "blocks/order.scss";
+@import "blocks/form.scss";
 @import "blocks/modal.scss";
