--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,8 @@ img {
   height: auto; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  cursor: pointer; }
 
 .button {
   display: inline-block;
@@ -72,11 +73,10 @@ a {
     width: 1150px; } }
 
 .page-header {
-  display: flex;
-  flex-direction: column;
   line-height: 24px;
   font-weight: 700;
   font-family: "Open Sans Bold", "Arial", sans-serif;
+  letter-spacing: 0;
   color: #000000;
   background-color: #ffffff; }
 
@@ -84,7 +84,7 @@ a {
   margin: 0;
   padding: 0;
   list-style: none;
-  border-bottom: 1px solid #ededed;
+  display: block;
   width: 86px;
   margin: 0 auto;
   text-align: center;
@@ -92,11 +92,11 @@ a {
   .page-header__logo--image {
     width: 86px;
     height: 35px;
-    margin: 21px 0; }
-    .page-header__logo--image:hover, .page-header__logo--image:focus {
-      opacity: 0.6; }
-    .page-header__logo--image:active {
-      opacity: 0.3; }
+    margin: 21px auto; }
+  .page-header__logo:hover, .page-header__logo:focus {
+    opacity: 0.6; }
+  .page-header__logo:active {
+    opacity: 0.3; }
 
 .page-header__delivery {
   display: none;
@@ -107,15 +107,12 @@ a {
 
 @media (min-width: 768px) {
   .page-header__logo {
-    padding-left: 50px;
-    padding-right: 50px;
     width: 113px;
-    background-position: 0 0;
-    background-repeat: no-repeat;
-    background-size: 113px auto;
     margin-left: 0;
     margin-right: auto;
-    text-align: left; }
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-size: 113px auto; }
     .page-header__logo--image {
       width: 113px;
       height: 46px;
@@ -123,25 +120,24 @@ a {
   .page-header__delivery {
     display: block;
     position: absolute;
-    top: 105px;
-    left: 630px;
+    top: 106px;
+    left: 465px;
     margin-left: auto; } }
 
 @media (min-width: 1150px) {
   .page-header__logo {
     position: absolute;
-    top: -3px;
-    right: 40%;
-    margin: 0;
+    top: 0;
+    right: 44%;
     width: 149px;
-    border: 0;
     background-size: 149px 72px; }
     .page-header__logo--image {
       width: 149px;
-      height: 72px; }
+      height: 72px;
+      margin-bottom: 0; }
   .page-header__delivery {
     top: 115px;
-    left: 880px; } }
+    left: 850px; } }
 
 .main-nav {
   position: relative;
@@ -165,7 +161,7 @@ a {
   padding-bottom: 28px;
   padding-left: 75px;
   letter-spacing: 1.4px;
-  border-bottom: 1px solid #ededed;
+  border-top: 1px solid #ededed;
   color: #000000; }
   .main-nav__item:hover, .main-nav__item:focus {
     color: #6e6e6e; }
@@ -174,9 +170,11 @@ a {
   .main-nav__item--search, .main-nav__item--user {
     position: relative; }
     .main-nav__item--search:hover path, .main-nav__item--search:focus path, .main-nav__item--user:hover path, .main-nav__item--user:focus path {
-      fill: #63d1bb; }
+      fill: #63d1bb;
+      transition: 0.3s; }
     .main-nav__item--search:active path, .main-nav__item--user:active path {
-      opacity: 0.3; }
+      opacity: 0.3;
+      transition: 0.3s; }
   .main-nav__item--search-icon, .main-nav__item--user-icon {
     position: absolute;
     top: 40%;
@@ -212,7 +210,7 @@ a {
   box-shadow: 0 6px 0 0 #000000, 0 12px 0 0 #000000; }
 
 .main-nav--closed .main-nav__toggle {
-  top: -55px;
+  top: 20px;
   right: 25px; }
   .main-nav--closed .main-nav__toggle::before, .main-nav--closed .main-nav__toggle::after {
     content: "";
@@ -235,7 +233,6 @@ a {
 
 @media (min-width: 768px) {
   .main-nav {
-    position: relative;
     width: auto;
     margin: 0;
     padding-left: 50px;
@@ -252,22 +249,23 @@ a {
       display: flex;
       text-align: right;
       position: absolute;
-      top: -85px;
+      top: 0;
       left: 48%;
       width: 390px; }
   .main-nav__item {
-    letter-spacing: 1.1px; }
+    letter-spacing: 1.1px;
+    border: 0; }
     .main-nav__item--main {
       padding-top: 15px;
       padding-bottom: 10px;
       padding-right: 10px;
       padding-left: 0px;
-      margin-right: 16px;
-      border: 0; }
+      margin-right: 16px; }
       .main-nav__item--main:nth-child(even) {
         margin-right: 0; }
     .main-nav__item--user {
-      padding-bottom: 34px;
+      padding-top: 29px;
+      padding-bottom: 31px;
       border-left: 1px solid #ededed; }
     .main-nav__item--search {
       font-size: 0;
@@ -330,6 +328,7 @@ a {
   font-family: "Open Sans Bold", "Arial", sans-serif;
   text-align: center;
   color: #000000;
+  border-top: 1px solid #ededed;
   letter-spacing: 1.2px;
   background-color: #fbfbfb;
   background-image: url("../img/hero-mobile.jpg");
@@ -371,7 +370,7 @@ a {
   .page-main__main-title {
     width: 100%;
     height: 600px;
-    margin-top: -50px;
+    margin-top: -55px;
     padding-top: 153px;
     letter-spacing: 1px;
     font-size: 43px;
@@ -390,10 +389,12 @@ a {
       background-repeat: no-repeat;
       background-size: auto 24px;
       padding-bottom: 93px;
-      margin-bottom: 67px;
+      margin-bottom: 77px;
       font-size: 40px; }
+    .page-main__main-title--catalog {
+      margin-top: -60px; }
     .page-main__main-title--form {
-      margin-bottom: 60px;
+      margin-bottom: 65px;
       font-size: 43px; }
     .page-main__main-title br:nth-child(1) {
       display: none; }
@@ -435,26 +436,27 @@ a {
   margin: 0;
   padding: 0;
   list-style: none;
+  font-size: 19px;
+  line-height: 24px;
+  font-weight: bold;
+  letter-spacing: 1.1px; }
+
+.products-type__link {
+  display: block;
+  color: #ffffff;
+  position: relative;
   padding-left: 30px;
   padding-right: 30px;
   padding-top: 25px;
   padding-bottom: 30px;
-  font-size: 19px;
-  line-height: 24px;
-  font-weight: bold;
-  letter-spacing: 1.1px;
   background-color: #63d1bb; }
-  .products-type__item--toys {
+  .products-type__link--toys {
     background-color: #56c3b2; }
-
-.products-type__link {
-  color: #ffffff;
-  position: relative; }
   .products-type__link::after {
     position: absolute;
     content: "";
-    top: 0px;
-    left: 216px;
+    top: 20px;
+    left: 245px;
     background-position: 0 0;
     background-repeat: no-repeat; }
   .products-type__link--furnishings::after {
@@ -465,12 +467,19 @@ a {
       opacity: 0.5;
       fill: red; }
   .products-type__link--toys::after {
-    top: -5px;
-    left: 205px;
+    left: 235px;
     width: 60px;
     height: 60px;
     opacity: 0.5;
     background-image: url("../img/icon-toy.svg"); }
+  .products-type__link:active {
+    color: rgba(255, 255, 255, 0.3); }
+  .products-type__link:hover::after {
+    opacity: 0.7; }
+  .products-type__link:active::after {
+    opacity: 0.3; }
+  .products-type__link--toys:hover {
+    background-color: #46c1ae; }
 
 .product__wrapper {
   margin-bottom: 28px;
@@ -541,34 +550,52 @@ a {
 
 .product__order {
   margin-bottom: 40px; }
+  .product__order:hover {
+    background-color: #444444;
+    color: #ffffff; }
+  .product__order:active {
+    background-color: #444444;
+    color: #757575; }
 
 @media (min-width: 768px) {
   .products-type {
     width: 768px;
     margin-bottom: 48px; }
   .products-type__header {
-    margin-bottom: 35px;
-    background-image: url("../img/bg-zigzag-fill.svg");
-    background-position: 0 bottom;
-    background-repeat: no-repeat;
-    background-size: auto 24px;
-    z-index: 200; }
+    margin-bottom: 35px; }
   .products-type__list {
     padding-left: 50px;
     padding-right: 50px;
     flex-direction: row;
-    margin-top: -128px; }
+    margin-top: -128px;
+    background-image: url("../img/bg-zigzag-fill.svg");
+    background-position: 0 bottom;
+    background-repeat: no-repeat;
+    background-size: auto 24px;
+    z-index: 400; }
   .products-type__item {
     width: 334px;
+    font-size: 20px;
+    line-height: 30px; }
+  .products-type__link {
     padding-left: 33px;
     padding-top: 31px;
     padding-bottom: 40px;
-    font-size: 20px;
-    line-height: 30px; }
-  .products-type__link::after {
-    left: 220px; }
-  .products-type__link--toys::after {
-    left: 200px; }
+    background-image: url("../img/bg-zigzag-fill.svg");
+    background-position: 0 bottom;
+    background-repeat: no-repeat;
+    background-size: auto 24px;
+    z-index: 100px; }
+    .products-type__link::after {
+      top: 30px;
+      left: 260px; }
+    .products-type__link--toys::after {
+      top: 35px;
+      left: 240px; }
+    .products-type__link:hover {
+      padding-top: 34px;
+      padding-bottom: 42px;
+      transition: 0.3s; }
   .product__wrapper {
     padding-left: 50px;
     padding-right: 50px;
@@ -834,25 +861,23 @@ a {
   flex-wrap: wrap;
   margin-bottom: 40px; }
 
-.reviews__prev {
+.reviews__link {
   width: 50%;
   height: 50px;
   padding: 0;
-  background-image: url("../img/icon-left-arrow.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-color: #ffffff;
   border: 1px solid #ededed; }
-
-.reviews__next {
-  width: 50%;
-  height: 50px;
-  background-image: url("../img/icon-right-arrow.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  border: 1px solid #ededed;
-  background-color: #ffffff;
-  border-left: none; }
+  .reviews__link--prev {
+    background-image: url("../img/icon-left-arrow.svg"); }
+  .reviews__link--next {
+    background-image: url("../img/icon-right-arrow.svg");
+    border-left: none; }
+  .reviews__link--prev:hover, .reviews__link--next:hover {
+    opacity: 0.6; }
+  .reviews__link--prev:active, .reviews__link--next:active {
+    opacity: 0.3; }
 
 @media (min-width: 768px) {
   .reviews {
@@ -905,7 +930,13 @@ a {
     width: 174px;
     top: 78px;
     right: 50px;
-    padding-bottom: 13px; } }
+    padding-bottom: 13px; }
+    .reviews__to-write:hover {
+      background-color: #444444;
+      color: #ffffff; }
+    .reviews__to-write:active {
+      background-color: #444444;
+      color: #757575; } }
 
 @media (min-width: 1150px) {
   .reviews {
@@ -955,6 +986,17 @@ a {
 .contacts__field--active {
   border-bottom: 1px solid #63d1bb; }
 
+.contacts__link {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+  .contacts__link:hover {
+    color: #63d1bb;
+    transition: 0.3s; }
+  .contacts__link:active {
+    opacity: 0.3;
+    transition: 0.3s; }
+
 .contacts__write-us {
   padding-left: 30px;
   padding-right: 30px; }
@@ -990,6 +1032,12 @@ a {
     display: none; }
   .contacts__button {
     width: 230px; }
+    .contacts__button:hover {
+      background-color: #444444;
+      color: #ffffff; }
+    .contacts__button:active {
+      background-color: #444444;
+      color: #757575; }
   .contacts__write-us {
     text-align: center; } }
 
@@ -1049,7 +1097,16 @@ a {
   border-bottom: 1px solid #e8e8e8; }
 
 .page-footer__logo {
-  display: none; }
+  display: block;
+  display: none;
+  margin: auto 0; }
+  .page-footer__logo:hover path,
+  .page-footer__logo:focus path {
+    fill: #46c1ae;
+    transition: 0.2s; }
+  .page-footer__logo:active path {
+    opacity: 0.3;
+    transition: 0.2s; }
 
 .social__list {
   margin: 0;
@@ -1076,20 +1133,17 @@ a {
   background-repeat: no-repeat;
   background-color: #f2f2f2; }
   .social__link--instagram {
-    width: 22px;
-    background-image: url("../img/icon-insta.svg"); }
+    width: 22px; }
   .social__link--facebook {
-    width: 15px;
-    background-image: url("../img/icon-fb.svg"); }
+    width: 15px; }
   .social__link--twitter {
-    width: 23px;
-    background-image: url("../img/icon-twitter.svg"); }
+    width: 23px; }
   .social__link:hover path,
   .social__link:focus path {
     fill: #46c1ae;
     transition: 0.2s; }
   .social__link:active path {
-    fill: #bde3dd;
+    opacity: 0.3;
     transition: 0.2s; }
 
 .page-footer__copyright {
@@ -1165,6 +1219,10 @@ a {
   margin-bottom: 30px;
   color: #000000;
   background-color: #ffffff; }
+  .catalog__item:hover .catalog__item__wrapper {
+    box-shadow: 0 6px 10px 0 #6e6e6e; }
+  .catalog__item:active .catalog__item__wrapper {
+    box-shadow: 0 3px 5px 0 #6e6e6e; }
 
 .catalog__item__wrapper {
   border: 1px solid #ededed; }
@@ -1194,10 +1252,17 @@ a {
   font-size: 16px;
   line-height: 24px;
   font-weight: 700;
-  font-family: "Open Sans Bold", "Arial", sans-serif; }
+  font-family: "Open Sans Bold", "Arial", sans-serif;
+  color: #000000; }
   .catalog__title--third {
     padding-top: 26px;
     margin-bottom: 7px; }
+  .catalog__title:hover {
+    opacity: 0.6;
+    transition: 0.3s; }
+  .catalog__title:active {
+    opacity: 0.3;
+    transition: 0.3s; }
 
 .catalog__description {
   margin: 0;
@@ -1229,11 +1294,14 @@ a {
 .catalog__order {
   width: 20px;
   padding: 0;
-  background-image: url("../img/icon-cart.svg");
-  background-position: center;
-  background-repeat: no-repeat;
   background-color: #ffffff;
   border: 0; }
+  .catalog__order:hover path {
+    fill: #63d1bb;
+    transition: 0.3s; }
+  .catalog__order:active path {
+    opacity: 0.3;
+    transition: 0.3s; }
 
 @media (min-width: 768px) {
   .catalog__list {
@@ -1317,6 +1385,10 @@ a {
   color: #000000;
   background-color: #ffffff;
   border: 1px solid #ededed; }
+  .video:hover .video__wrapper {
+    box-shadow: 0 6px 10px 0 #6e6e6e; }
+  .video:active .video__wrapper {
+    box-shadow: 0 3px 5px 0 #6e6e6e; }
 
 .video__play--wrapper {
   position: relative;
@@ -1339,6 +1411,7 @@ a {
   line-height: 24px;
   font-weight: 700;
   font-family: "Open Sans Bold", "Arial", sans-serif;
+  color: #000000;
   background-image: url("../img/icon-video.svg");
   background-position: 30px 5px;
   background-repeat: no-repeat; }
@@ -1352,6 +1425,19 @@ a {
   margin-top: 78px;
   margin-bottom: 6px;
   background-color: rba(241, 241, 241); }
+  .video__play::before {
+    top: 50%;
+    left: 50%;
+    width: 102px;
+    height: 78px;
+    transform: translate(-50%, -50%);
+    background: url("../img/icon-play.svg") no-repeat;
+    z-index: 100; }
+  .video__play:hover::before {
+    transform: scale(1.2) translate(-40%, -40%); }
+  .video__play:active::before {
+    transform: scale(0.8) translate(-60%, -60%);
+    opacity: 0.3; }
 
 .video__description {
   margin: 0;
@@ -1367,6 +1453,12 @@ a {
   width: 190px;
   margin-left: 33px;
   margin-bottom: 30px; }
+  .video__order:hover {
+    background-color: #444444;
+    color: #ffffff; }
+  .video__order:active {
+    background-color: #444444;
+    color: #757575; }
 
 @media (min-width: 768px) {
   .video {
@@ -1642,6 +1734,12 @@ a {
 
 .form__button {
   margin-bottom: 52px; }
+  .form__button:hover {
+    background-color: #444444;
+    color: #ffffff; }
+  .form__button:active {
+    background-color: #444444;
+    color: #757575; }
 
 @media (min-width: 768px) {
   .form {
@@ -1806,7 +1904,7 @@ a {
   .form__list--color {
     width: 764px; }
   .form__input-client-data-icon {
-    top: 1375px;
+    top: 1370px;
     left: 930px; }
     .form__input-client-data-icon--email {
       top: 1435px;
