--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -10,7 +10,20 @@
   border-bottom: 1px solid lighten($dark, 91%);
 }
 .page-footer__logo {
+  display: block;
   display: none;
+  margin: auto 0;
+
+  &:hover path,
+  &:focus path {
+    fill: rgb(70, 193, 174);
+    transition: 0.2s;
+  }
+&:active path {
+opacity: 0.3;
+
+transition: 0.2s;
+}
 }
 .social__list {
   @include clear;
@@ -38,17 +51,14 @@
 
   &--instagram {
     width: 22px;
-    background-image: url("../img/icon-insta.svg");
   }
 
   &--facebook {
     width: 15px;
-    background-image: url("../img/icon-fb.svg");
   }
 
   &--twitter {
     width: 23px;
-    background-image: url("../img/icon-twitter.svg");
   }
 
     &:hover path,
@@ -57,14 +67,11 @@
       transition: 0.2s;
     }
   &:active path {
-  fill: rgb(189, 227, 221);
+  opacity: 0.3;
 
   transition: 0.2s;
   }
 }
-// .social__link:active {
-//   background-color: rgb(189, 227, 221);
-// }
 
 .page-footer__copyright {
   display: flex;
