--- a/sass/blocks/page-main.scss
+++ b/sass/blocks/page-main.scss
@@ -1,6 +1,6 @@
 .page-main__main-title {
   @include title;
-
+  @include border;
   letter-spacing: 1.2px;
   background-color: rgb(251, 251, 251);
   background-image: url("../img/hero-mobile.jpg");
@@ -47,10 +47,10 @@
 }
 
 @media (min-width: $tablet-width) {
-    .page-main__main-title {
+  .page-main__main-title {
     width: 100%;
     height: 600px;
-    margin-top: -50px;
+    margin-top: -55px;
     padding-top: 153px;
     letter-spacing: 1px;
     font-size: 43px;
@@ -68,12 +68,15 @@
       padding-top: 95px;
       @include zigzag-big;
       padding-bottom: 93px;
-      margin-bottom: 67px;
+      margin-bottom: 77px;
       font-size: 40px;
+    }
+    &--catalog {
+      margin-top: -60px;
     }
 
     &--form {
-      margin-bottom: 60px;
+      margin-bottom: 65px;
 
       font-size: 43px;
     }
