--- a/css/style.css
+++ b/css/style.css
@@ -384,15 +384,20 @@ a {
     .page-main__main-title--catalog, .page-main__main-title--form {
       height: auto;
       padding-top: 95px;
-      background-image: url("../img/bg-zigzag-fill.svg");
-      background-position: 0 bottom;
-      background-repeat: no-repeat;
-      background-size: auto 24px;
       padding-bottom: 93px;
       margin-bottom: 77px;
-      font-size: 40px; }
-    .page-main__main-title--catalog {
-      margin-top: -60px; }
+      font-size: 40px;
+      background-image: none; }
+    .page-main__main-title--main::after {
+      position: absolute;
+      content: "";
+      bottom: -209px;
+      left: 0;
+      width: 100%;
+      height: 24px;
+      background: url("../img/bg-zigzag-fill.svg") no-repeat;
+      background-size: 768px 26px;
+      z-index: 100; }
     .page-main__main-title--form {
       margin-bottom: 65px;
       font-size: 43px; }
@@ -410,10 +415,11 @@ a {
     line-height: 57px; }
     .page-main__main-title--catalog, .page-main__main-title--form {
       padding-bottom: 115px;
-      background-size: auto 34px;
       margin-bottom: 115px; }
     .page-main__main-title--form {
       margin-bottom: 108px; }
+    .page-main__main-title--main::after {
+      background-size: 1150px 34px; }
   .page-main__title {
     font-size: 50px;
     line-height: 57px; } }
@@ -464,8 +470,7 @@ a {
     height: 62px;
     background-image: url("../img/icon-interior.svg"); }
     .products-type__link--furnishings::after path {
-      opacity: 0.5;
-      fill: red; }
+      opacity: 0.5; }
   .products-type__link--toys::after {
     left: 235px;
     width: 60px;
@@ -567,12 +572,7 @@ a {
     padding-left: 50px;
     padding-right: 50px;
     flex-direction: row;
-    margin-top: -128px;
-    background-image: url("../img/bg-zigzag-fill.svg");
-    background-position: 0 bottom;
-    background-repeat: no-repeat;
-    background-size: auto 24px;
-    z-index: 400; }
+    margin-top: -128px; }
   .products-type__item {
     width: 334px;
     font-size: 20px;
@@ -580,12 +580,7 @@ a {
   .products-type__link {
     padding-left: 33px;
     padding-top: 31px;
-    padding-bottom: 40px;
-    background-image: url("../img/bg-zigzag-fill.svg");
-    background-position: 0 bottom;
-    background-repeat: no-repeat;
-    background-size: auto 24px;
-    z-index: 100px; }
+    padding-bottom: 40px; }
     .products-type__link::after {
       top: 30px;
       left: 260px; }
@@ -593,9 +588,10 @@ a {
       top: 35px;
       left: 240px; }
     .products-type__link:hover {
+      margin-top: -5px;
       padding-top: 34px;
       padding-bottom: 42px;
-      transition: 0.3s; }
+      transition: 0.2s; }
   .product__wrapper {
     padding-left: 50px;
     padding-right: 50px;
@@ -960,6 +956,7 @@ a {
 
 .contacts {
   padding-right: 30px;
+  margin-bottom: 58px;
   font-size: 18px; }
 
 .contacts__title {
@@ -1127,10 +1124,8 @@ a {
   padding: 0;
   list-style: none;
   display: flex;
-  vertical-align: bottom;
+  align-items: flex-end;
   height: 28px;
-  background-position: 0 bottom;
-  background-repeat: no-repeat;
   background-color: #f2f2f2; }
   .social__link--instagram {
     width: 22px; }
@@ -1163,23 +1158,23 @@ a {
   font-weight: 700;
   color: #000000; }
   .copyright__text:active {
-    color: #a8a8a8;
+    opacity: 0.3;
     transition: 0.2s; }
 
 .copyright__link {
   margin: 0;
   padding: 0;
   list-style: none;
+  align-items: flex-start;
   width: 40px;
-  height: 46px;
+  height: 40px;
   border: none;
-  background-image: url("../img/htmlacademy.svg");
-  background-position: 5px 0;
-  background-size: 40px 46px;
-  background-repeat: no-repeat;
   background-color: #f2f2f2; }
+  .copyright__link:hover path {
+    fill: #46c1ae;
+    transition: 0.2s; }
   .copyright__link:active path {
-    fill: #bde3dd;
+    opacity: 0.3;
     transition: 0.2s; }
 
 @media (min-width: 768px) {
@@ -1397,7 +1392,24 @@ a {
   text-align: center;
   background-color: #e8e9eb;
   overflow: hidden;
-  height: 150px; }
+  height: 150px;
+  margin-top: 95px;
+  margin-bottom: 27px; }
+  .video__play--wrapper::before {
+    position: absolute;
+    content: "";
+    top: 50%;
+    left: 50%;
+    width: 102px;
+    height: 78px;
+    transform: translate(-50%, -50%);
+    background: url("../img/icon-play.svg") no-repeat;
+    z-index: 100; }
+  .video__play--wrapper:hover::before {
+    transform: scale(1.2) translate(-40%, -40%); }
+  .video__play--wrapper:active::before {
+    transform: scale(0.8) translate(-60%, -60%);
+    opacity: 0.3; }
 
 .video__title {
   margin: 0;
@@ -1422,22 +1434,7 @@ a {
   list-style: none;
   width: 100%;
   height: 150px;
-  margin-top: 78px;
-  margin-bottom: 6px;
   background-color: rba(241, 241, 241); }
-  .video__play::before {
-    top: 50%;
-    left: 50%;
-    width: 102px;
-    height: 78px;
-    transform: translate(-50%, -50%);
-    background: url("../img/icon-play.svg") no-repeat;
-    z-index: 100; }
-  .video__play:hover::before {
-    transform: scale(1.2) translate(-40%, -40%); }
-  .video__play:active::before {
-    transform: scale(0.8) translate(-60%, -60%);
-    opacity: 0.3; }
 
 .video__description {
   margin: 0;
@@ -1471,6 +1468,8 @@ a {
     border: 0; }
   .video__play--wrapper {
     position: relative;
+    margin-top: 0;
+    margin-bottom: 0;
     width: 668px;
     height: auto; }
   .video__play {
