--- a/sass/blocks/page-main.scss
+++ b/sass/blocks/page-main.scss
@@ -66,13 +66,24 @@
     &--form {
       height: auto;
       padding-top: 95px;
-      @include zigzag-big;
       padding-bottom: 93px;
       margin-bottom: 77px;
       font-size: 40px;
+  background-image: none;
+
     }
-    &--catalog {
-      margin-top: -60px;
+    &--main {
+      &::after {
+        position: absolute;
+        content:"";
+        bottom: -209px;
+        left: 0;
+        width: 100%;
+        height: 24px;
+          background: url("../img/bg-zigzag-fill.svg") no-repeat;
+        background-size: 768px 26px;
+        z-index: 100;
+      }
     }
 
     &--form {
@@ -84,6 +95,8 @@
       br:nth-child(1) {
         display: none;
       }
+
+
     }
 
     .page-main__title {
@@ -103,12 +116,18 @@
     &--catalog,
     &--form {
       padding-bottom: 115px;
-      background-size: auto 34px;
+
       margin-bottom: 115px;
     }
 
     &--form {
       margin-bottom: 108px;
+    }
+
+    &--main {
+      &::after {
+              background-size: 1150px 34px;
+    }
     }
   }
 
