--- a/sass/blocks/products.scss
+++ b/sass/blocks/products.scss
@@ -53,7 +53,6 @@
     background-image: url("../img/icon-interior.svg");
     path {
     opacity: 0.5;
-    fill: red;
     }
   }
 
@@ -186,8 +185,8 @@
     @include container;
     flex-direction: row;
     margin-top: -128px;
-    @include zigzag-big;
-    z-index: 400;
+    // @include zigzag-big;
+    // z-index: 400;
   }
   .products-type__item {
 
@@ -202,8 +201,8 @@
     padding-left: 33px;
     padding-top: 31px;
     padding-bottom: 40px;
-    @include zigzag-big;
-    z-index: 100px;
+    // @include zigzag-big;
+    // z-index: 100px;
 
     &::after {
       top: 30px;
@@ -216,9 +215,10 @@
     }
 
     &:hover {
+      margin-top: -5px;
       padding-top: 34px;
       padding-bottom: 42px;
-      transition: 0.3s;
+      transition: 0.2s;
     }
 }
 
