--- a/sass/blocks/video.scss
+++ b/sass/blocks/video.scss
@@ -24,7 +24,28 @@
   @include image-wrapper;
 
   height: 150px;
+  margin-top: 95px;
+  margin-bottom: 27px;
+  &::before {
+    position: absolute;
+    content: "";
+    top: 50%;
+    left: 50%;
+    width: 102px;
+    height: 78px;
+    transform: translate(-50%, -50%);
+    background: url("../img/icon-play.svg") no-repeat;
+    z-index: 100;
+  }
 
+  &:hover::before{
+    transform: scale(1.2) translate(-40%, -40%);
+  }
+
+  &:active::before{
+    transform: scale(0.8) translate(-60%, -60%);
+    opacity: 0.3;
+  }
 
 }
 
@@ -50,29 +71,12 @@
   @include clear;
   width: 100%;
   height: 150px;
-  margin-top: 78px;
-  margin-bottom: 6px;
+  // margin-top: 78px;
+  // margin-bottom: 6px;
 
   background-color: rba(241, 241, 241);
 
-  &::before {
-    top: 50%;
-    left: 50%;
-    width: 102px;
-    height: 78px;
-    transform: translate(-50%, -50%);
-    background: url("../img/icon-play.svg") no-repeat;
-    z-index: 100;
-  }
 
-  &:hover::before{
-    transform: scale(1.2) translate(-40%, -40%);
-  }
-
-  &:active::before{
-    transform: scale(0.8) translate(-60%, -60%);
-    opacity: 0.3;
-  }
 }
 
 .video__description {
@@ -113,6 +117,8 @@
 
   .video__play--wrapper {
     position: relative;
+    margin-top: 0;
+    margin-bottom: 0;
 
     width: 668px;
     height: auto;
