--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,7 @@ a {
     font-size: 16px; }
     .main-nav__list--main {
       display: flex;
+      flex-wrap: wrap;
       width: 390px;
       font-size: 15px; }
     .main-nav__list--user {
@@ -257,6 +258,7 @@ a {
       top: 0;
       left: 48%;
       display: flex;
+      flex-wrap: wrap;
       text-align: right;
       width: 390px; }
   .main-nav__item {
@@ -301,6 +303,8 @@ a {
     position: absolute;
     top: 100px;
     display: flex;
+    flex-wrap: wrap;
+    width: 390px;
     font-size: 14px; }
   .main-nav__item--main {
     margin-right: 0px;
@@ -394,18 +398,16 @@ a {
       margin-bottom: 67px;
       font-size: 40px;
       background-image: none; }
-    .page-main__main-title--main::after, .page-main__main-title--catalog::after, .page-main__main-title--form::after {
-      position: absolute;
-      content: "";
-      top: 835px;
-      left: 0;
-      z-index: 100;
-      width: 100%;
-      height: 24px;
-      background: url("../img/bg-zigzag-fill.svg");
-      background-size: auto 26px; }
-    .page-main__main-title--catalog::after, .page-main__main-title--form::after {
-      top: 305px; }
+      .page-main__main-title--catalog::after, .page-main__main-title--form::after {
+        position: absolute;
+        content: "";
+        top: 305px;
+        left: 0;
+        z-index: 100;
+        width: 100%;
+        height: 24px;
+        background: url("../img/bg-zigzag-fill.svg");
+        background-size: auto 26px; }
     .page-main__main-title--form {
       margin-bottom: 60px;
       font-size: 43px; }
@@ -424,12 +426,11 @@ a {
     .page-main__main-title--catalog, .page-main__main-title--form {
       padding-bottom: 115px;
       margin-bottom: 115px; }
+      .page-main__main-title--catalog::after, .page-main__main-title--form::after {
+        background-size: auto 34px;
+        top: 345px; }
     .page-main__main-title--form {
       margin-bottom: 108px; }
-    .page-main__main-title--main::after, .page-main__main-title--catalog::after, .page-main__main-title--form::after {
-      background-size: auto 34px; }
-    .page-main__main-title--catalog::after, .page-main__main-title--form::after {
-      top: 345px; }
   .page-main__title {
     font-size: 50px;
     line-height: 57px; } }
@@ -446,6 +447,7 @@ a {
   list-style: none;
   margin-top: -110px;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column; }
 
 .products-type__item {
@@ -586,8 +588,19 @@ a {
   .products-type__list {
     padding-left: 50px;
     padding-right: 50px;
+    position: relative;
     flex-direction: row;
     margin-top: -128px; }
+    .products-type__list::after {
+      position: absolute;
+      content: "";
+      bottom: 0;
+      left: 0;
+      z-index: 100;
+      width: 100%;
+      height: 24px;
+      background: url("../img/bg-zigzag-fill.svg");
+      background-size: auto 26px; }
   .products-type__item {
     width: 334px;
     font-size: 20px;
@@ -1151,6 +1164,7 @@ a {
   padding: 0;
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-end;
   height: 28px;
   background-color: #f2f2f2; }
@@ -1368,6 +1382,7 @@ a {
 @media (min-width: 1150px) {
   .catalog__list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 4px; }
   .catalog__item {
@@ -1495,6 +1510,7 @@ a {
     margin: 0;
     margin-bottom: 64px;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     border: 0; }
   .video__play--wrapper {
@@ -1638,7 +1654,7 @@ a {
   padding-left: 63px; }
   .form__item--color {
     margin-bottom: 44px; }
-  .form__item--color-last {
+  .form__item--color:last-child {
     margin-bottom: 0; }
 
 .form__label {
