--- a/sass/blocks/catalog.scss
+++ b/sass/blocks/catalog.scss
@@ -190,6 +190,7 @@
 @media (min-width: $desktop-width) {
   .catalog__list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 4px;
   }
