--- a/sass/blocks/products.scss
+++ b/sass/blocks/products.scss
@@ -10,6 +10,7 @@
   @include clear;
   margin-top: -110px;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
 }
 
@@ -201,8 +202,23 @@
 
   .products-type__list {
     @include container;
+    position: relative;
     flex-direction: row;
     margin-top: -128px;
+    &::after {
+      position: absolute;
+      content:"";
+      // top: 235px;
+      bottom: 0;
+      left: 0;
+      z-index: 100;
+
+      width: 100%;
+      height: 24px;
+
+      background: url("../img/bg-zigzag-fill.svg");
+      background-size: auto 26px;
+    }
   }
 
   .products-type__item {
