--- a/sass/blocks/products.scss
+++ b/sass/blocks/products.scss
@@ -1,3 +1,4 @@
+// стили для секции Категории товаров
 .products-type {
   width: 320px;
 }
@@ -98,7 +99,7 @@
     transition: 0.2s;
   }
 }
-
+// стили для продукта("Вязаные корзинки")
 .product__wrapper {
   margin-bottom: 28px;
   padding-left: 30px;
